feat: API Delete Lending History
