# docs/swagger.yaml
@@ -266,10 +266,28 @@ paths:
       tags:
       - Lending History
   /api/lending-history/{history_id}:
+    delete:
+      consumes:
+      - application/json
+      description: Hapus Data History Peminjaman
+      parameters:
+      - description: ID Landing History
+        in: path
+        name: history_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - BearerAuth: []
+      summary: Delete Lending History
+      tags:
+      - Lending History
     put:
       consumes:
       - application/json
-      description: Update Data History Peminjaman
+      description: Perbarui Data History Peminjaman
       parameters:
       - description: ID Landing History
         in: path
